--- a/.VERSION_CONTROL.md
+++ b/.VERSION_CONTROL.md
@@ -1,11 +1,12 @@
 # 1.0.0
-- [ ] Fix Android slider icons
+- [x] Fix Android slider icons
 - [ ] Onboarding color scheme
 - [ ] Animate trend data appear on page
 - [ ] Spider graph of user based on data
 - [ ] Trend alerts on check in confirmation page
 - [ ] Share image from check in confirmation same as history details
 - [ ] Sentry
+- [ ] Convex
 - [ ] Animations and mascots with Rive
  
 # Backlog
