--- a/.VERSION_CONTROL.md
+++ b/.VERSION_CONTROL.md
@@ -1,7 +1,7 @@
 # 1.0.0
 - [x] Fix Android slider icons
+- [x] Animate trend data appear on page
 - [ ] Onboarding color scheme
-- [ ] Animate trend data appear on page
 - [ ] Spider graph of user based on data
 - [ ] Trend alerts on check in confirmation page
 - [ ] Share image from check in confirmation same as history details
