headers no scroll

--- a/.VERSION_CONTROL.md
+++ b/.VERSION_CONTROL.md
@@ -1,6 +1,7 @@
 # 1.0.0
 - [x] Fix Android slider icons
 - [x] Animate trend data appear on page
+- [x] title bar on trends, settings, exercises stuck
 - [ ] Onboarding color scheme
 - [ ] Spider graph of user based on data
 - [ ] Trend alerts on check in confirmation page
