--- a/.VERSION_CONTROL.md
+++ b/.VERSION_CONTROL.md
@@ -2,10 +2,10 @@
 - [x] Fix Android slider icons
 - [x] Animate trend data appear on page
 - [x] title bar on trends, settings, exercises stuck
+- [x] Share image from check in confirmation same as history details
 - [ ] Onboarding color scheme
 - [ ] Spider graph of user based on data
 - [ ] Trend alerts on check in confirmation page
-- [ ] Share image from check in confirmation same as history details
 - [ ] Sentry
 - [ ] Convex
 - [ ] Animations and mascots with Rive
