--- a/.VERSION_CONTROL.md
+++ b/.VERSION_CONTROL.md
@@ -3,7 +3,7 @@
 - [x] Animate trend data appear on page
 - [x] title bar on trends, settings, exercises stuck
 - [x] Share image from check in confirmation same as history details
-- [ ] Onboarding color scheme
+- [x] Onboarding color scheme
 - [ ] Spider graph of user based on data
 - [ ] Trend alerts on check in confirmation page
 - [ ] Sentry
