--- a/.VERSION_CONTROL.md
+++ b/.VERSION_CONTROL.md
@@ -4,9 +4,9 @@
 - [x] title bar on trends, settings, exercises stuck
 - [x] Share image from check in confirmation same as history details
 - [x] Onboarding color scheme
+- [x] Sentry
 - [ ] Spider graph of user based on data
 - [ ] Trend alerts on check in confirmation page
-- [ ] Sentry
 - [ ] Convex
 - [ ] Animations and mascots with Rive
  
