--- a/.VERSION_CONTROL.md
+++ b/.VERSION_CONTROL.md
@@ -5,14 +5,14 @@
 - [x] Share image from check in confirmation same as history details
 - [x] Onboarding color scheme
 - [x] Sentry
+- [x] Trend alerts on check in confirmation page
 - [ ] Spider graph of user based on data
-- [ ] Trend alerts on check in confirmation page
 - [ ] Convex
 - [ ] Animations and mascots with Rive
  
 # Backlog
 - [ ] Link macro trackers
-- [ ] Whoop application approved
+- [ ] Whoop application
 - [ ] AI Chatbot for mental work
 - [ ] more mental exercises
 - [ ] long hold app action
@@ -22,4 +22,3 @@
 - [ ] google health
 - [ ] fitbit
 - [ ] AI mantras to scroll through
-- [ ] Performance of visual gen
