--- a/.VERSION_CONTROL.md
+++ b/.VERSION_CONTROL.md
@@ -6,8 +6,9 @@
 - [x] Onboarding color scheme
 - [x] Sentry
 - [x] Trend alerts on check in confirmation page
-- [ ] Spider graph of user based on data
 - [ ] Convex
+- [ ] add app demo to onboarding
+- [ ] Spider graph of user based on data
 - [ ] Animations and mascots with Rive
  
 # Backlog
